test/1.2/errors/T_EZRANGE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
extern int f();
bank {
    /// ERROR EZRANGE
    register r0[i in 2..3] size 1 @ undefined;
    /// ERROR EZRANGE
    register r1[i in f()..3] size 1 @ undefined;
}
